--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
             </div>
             <div class="latestwork">
                 <img src="image/i2.png" alt="">
-                <h2>Power-x-gym (gym website)</h2>
+                <h2>Creative Agency</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, laudantium eius!</p>
             </div>
             <div class="latestwork">
                 <img src="image/i3.png" alt="">
-                <h2>Power-x-gym (gym website)</h2>
+                <h2>Hard Rock Music</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, laudantium eius!</p>
             </div>
         </section>
