--- a/index.html
+++ b/index.html
@@ -82,6 +82,15 @@
         </div>
     </section>
     <!-- work inwuiry  end.....  -->
+    <section class="formsection">
+        <div class="sormsectionstart">
+            <h3>Feel free to get in touch with me. I am always open to discussing new projects</h3>
+            <form action="">
+                <textarea id="comment" name="comment"></textarea><br>
+                <button>Send</button>
+            </form>
+        </div>
+    </section>
     <!-- stay conneted start ...........  -->
     <section>
         <div class="stayconnected">
